--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,9 @@
 [AUTH]
 require_login = true
 
+[MONGODB]
+uri = mongodb+srv://yokamoto5742:Mi3omN6FCYO8bdgL@cluster0.vsi47.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+
 [GEMINI]
 model = gemini-2.0-pro-exp-02-05
 
