--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ certifi==2025.1.31
 charset-normalizer==3.4.1
 click==8.1.8
 colorama==0.4.6
+dnspython==2.7.0
 gitdb==4.0.12
 GitPython==3.1.44
 google-ai-generativelanguage==0.6.15
@@ -38,8 +39,10 @@ pyasn1_modules==0.4.1
 pydantic==2.10.6
 pydantic_core==2.27.2
 pydeck==0.9.1
+pymongo==4.11.3
 pyparsing==3.2.1
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 pytz==2025.1
 referencing==0.36.2
 requests==2.32.3
