診療科ごとにプロンプ等管理

--- a/config.ini
+++ b/config.ini
@@ -3,9 +3,8 @@ discharge_summary = あなたは経験豊富な医療文書作成の専門家で
     当院のフォーマットに従って退院時サマリを作成してください
     このカルテ記載を使用して、包括的で簡潔な退院時サマリを作成してください。
     医療専門用語を適切に使用し、重要な情報を漏らさず、読みやすく整理された文書を作成してください。
-    医療従事者が読みやすく、必要な情報を迅速に把握できるような文書を作成してください。
 
-    退院時サマリの構造:
+    当院のフォーマット:
     ・入院期間
 
     ・現病歴(入院日までの情報のみを記載)
@@ -21,6 +20,5 @@ discharge_summary = あなたは経験豊富な医療文書作成の専門家で
     ・退院申し送り
     退院時方針
     退院時処方
-
 
     ・禁忌/アレルギー
