--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ grpcio==1.71.0
 grpcio-status==1.71.0
 httplib2==0.22.0
 idna==3.10
+iniconfig==2.1.0
 Jinja2==3.1.6
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
@@ -31,6 +32,7 @@ numpy==2.2.4
 packaging==24.2
 pandas==2.2.3
 pillow==11.1.0
+pluggy==1.5.0
 proto-plus==1.26.1
 protobuf==5.29.4
 pyarrow==19.0.1
@@ -41,6 +43,7 @@ pydantic_core==2.27.2
 pydeck==0.9.1
 pymongo==4.11.3
 pyparsing==3.2.1
+pytest==8.3.5
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2025.1
