--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 altair==5.5.0
 annotated-types==0.7.0
+anthropic==0.49.0
+anyio==4.9.0
 attrs==25.3.0
 bcrypt==4.3.0
 blinker==1.9.0
@@ -8,6 +10,7 @@ certifi==2025.1.31
 charset-normalizer==3.4.1
 click==8.1.8
 colorama==0.4.6
+distro==1.9.0
 dnspython==2.7.0
 gitdb==4.0.12
 GitPython==3.1.44
@@ -20,10 +23,14 @@ google-generativeai==0.8.4
 googleapis-common-protos==1.69.2
 grpcio==1.71.0
 grpcio-status==1.71.0
+h11==0.14.0
+httpcore==1.0.7
 httplib2==0.22.0
+httpx==0.28.1
 idna==3.10
 iniconfig==2.1.0
 Jinja2==3.1.6
+jiter==0.9.0
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
 MarkupSafe==3.0.2
@@ -53,6 +60,7 @@ rpds-py==0.23.1
 rsa==4.9
 six==1.17.0
 smmap==5.0.2
+sniffio==1.3.1
 streamlit==1.43.2
 tenacity==9.0.0
 toml==0.10.2
@@ -62,4 +70,5 @@ typing_extensions==4.12.2
 tzdata==2025.1
 uritemplate==4.1.1
 urllib3==2.3.0
+uv==0.6.12
 watchdog==6.0.0
