--- a/requirements.txt
+++ b/requirements.txt
@@ -36,6 +36,7 @@ jsonschema-specifications==2024.10.1
 MarkupSafe==3.0.2
 narwhals==1.31.0
 numpy==2.2.4
+openai==1.75.0
 packaging==24.2
 pandas==2.2.3
 pillow==11.1.0
