gemini_api.pyの更新

--- a/requirements.txt
+++ b/requirements.txt
@@ -19,12 +19,13 @@ google-api-core==2.24.2
 google-api-python-client==2.165.0
 google-auth==2.38.0
 google-auth-httplib2==0.2.0
+google-genai==1.12.1
 google-generativeai==0.8.4
 googleapis-common-protos==1.69.2
 grpcio==1.71.0
 grpcio-status==1.71.0
 h11==0.14.0
-httpcore==1.0.7
+httpcore==1.0.8
 httplib2==0.22.0
 httpx==0.28.1
 idna==3.10
@@ -71,5 +72,6 @@ typing_extensions==4.12.2
 tzdata==2025.1
 uritemplate==4.1.1
 urllib3==2.3.0
-uv==0.6.12
+uv==0.6.14
 watchdog==6.0.0
+websockets==15.0.1
